[Styling] Fix all spacing related issues

--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@
 
 :root {
   font-size: 62.5%;
+
+  --primary-color: rgb(157, 111, 91);
+  --secondary-color: darkgray;
 }
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 
 .main {
@@ -20,7 +23,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(227, 203, 142);
+  background-color: var(--primary-color);
 }
 
 .card {
@@ -28,12 +31,11 @@ body {
   height: 60rem;
   border-radius: 2rem;
   padding: 2rem;
-  background-color: darkgray;
+  background-color: var(--secondary-color);
 
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  /* row-gap: 0.5rem; */
 }
 
 .company,
@@ -42,12 +44,10 @@ body {
 .contact {
   flex: auto;
   width: 100%;
-  /* padding: 1rem; */
 }
 
 .company {
-  /* background-color: aqua; */
-  flex-grow: 0.5;
+  flex-grow: 1;
 
   display: flex;
   flex-direction: column;
@@ -62,7 +62,6 @@ body {
 }
 
 .mission {
-  /* background-color: blueviolet; */
   flex-grow: 1;
 
   display: flex;
@@ -72,30 +71,26 @@ body {
 
 .mission p {
   letter-spacing: 0.05rem;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   line-height: 2.5rem;
 }
 
 .service {
-  /* background-color: chocolate; */
   flex-grow: 2;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  /* row-gap: 1rem; */
 }
 
 .service h3 {
   width: 100%;
-  flex-grow: 1;
+  flex-grow: 0.5;
 
   display: flex;
   align-items: center;
   justify-content: center;
   letter-spacing: 0.1rem;
-  /* background-color: red; */
 }
 
 .service .programs {
@@ -106,53 +101,38 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem 0;
   row-gap: 2rem;
-  /* background-color: bisque; */
 }
 
 .programs p {
-  flex: auto;
-  /* width: 100%; */
-  padding: 0.5rem 0.7rem;
+  padding: 1rem;
   border-radius: 1rem;
 
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(227, 203, 142);
+  background-color: var(--primary-color);
+  font-size: 1.5rem;
+  font-weight: 500;
 }
-
-/* .programs > p:nth-child(1) {
-  background-color: lightblue;
-}
-
-.programs > p:nth-child(2) {
-  background-color: lightcoral;
-} */
 
 .service .brochure {
   flex-grow: 1;
-  /* background-color: blueviolet; */
   width: 100%;
-  /* padding: 0.5rem 0; */
 
   display: flex;
   justify-content: center;
   align-items: center;
-  letter-spacing: 0.15rem;
   font-size: 1.5rem;
-  /* font-weight: 200; */
 }
 
 .contact {
-  /* background-color: darksalmon; */
   flex-grow: 1;
 
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  border-top: black 0.2rem;
+  border-top: var(--primary-color) 0.1rem;
   border-top-style: groove;
 }
 
